added signup html page

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>
         <nav id ="navigation-bar">
             <div class="logo">
-                <h1>Taskflow</h1>
+                <h1><a href="index.html">Taskflow</a></h1>
             </div>
             <ul class="main-nav">
-                <button class="login-btn" id="login">Log in</button>
+                <button class="login-btn" id="login"><a href="signup.html">Log in</a></button>
             </ul>
         </nav>
     </header>
@@ -23,7 +23,7 @@
             <div class="hero-content">
                 <h1>Elevate Your Efficiency, One Task at a Time!</h1>
                 <p>Simplify your day and accomplish more with TaskFlow's intuitive to-do list features.</p>
-                <button class="hero-btn">Start for free</button>
+                <button class="hero-btn"><a href="signup.html">Start for free</a></button>
             </div>
         </div>
     </main>
