--- a/signup.html
+++ b/signup.html
@@ -19,18 +19,20 @@
     </header>
 
     <main>
-        <div class="page-title">
-            <h2>Sign up</h2>
-            <p>Quickly make a free account to use Taskflow right away!</p>
+        <div class="container">
+            <div class="page-title">
+                <h2>Sign up</h2>
+                <p>Quickly make a free account to use Taskflow right away!</p>
+            </div>
+            <form name="registration" class="signup-area">
+                <label>Email address*</label>
+                <input type="email" class="text-field" id="email-field" placeholder="Enter your email address">
+                <label>Password*</label>
+                <input type="password" class="text-field" id="pwd-field" placeholder="Enter your password">
+                <button class="signup-btn">Sign up</button>
+                <p>Already a member? <span class="hyperlink"><a href="login.html">Log in</a></span></p>
+            </form>
         </div>
-        <form name="registration" class="singup-area">
-            <label>Email address</label>
-            <input type="email" class="text-field" id="email-field" placeholder="Enter your email address">
-            <label>Password</label>
-            <input type="password" class="text-field" id="pwd-field" placeholder="Enter your password">
-            <button class="signup-btn">Sign up</button>
-            <p>Already a member? <span class="hyperlink">Log in</span></p>
-        </form>
     </main>
     <script src="scripts.js"></script>
 </body>
