update styles.css - styled navbar, sidebar tab, and tasks section on dashboard page

--- a/signup.html
+++ b/signup.html
@@ -29,11 +29,13 @@
                 <input type="email" class="text-field" id="email-field" placeholder="Enter your email address">
                 <label>Password*</label>
                 <input type="password" class="text-field" id="pwd-field" placeholder="Enter your password">
-                <button class="signup-btn">Sign up</button>
+                <!-- <p class="error-message" id="error">Please enter valid details</p> -->
+                <button class="signup-btn" id="signup">Sign up</button>
                 <p>Already a member? <span class="hyperlink"><a href="login.html">Log in</a></span></p>
             </form>
         </div>
     </main>
-    <script src="scripts.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="home.js"></script>
 </body>
 </html>
