auth.js - added sign up functionality with localstorage

--- a/taskflow.html
+++ b/taskflow.html
@@ -54,6 +54,13 @@
             </div>
             <input type="radio" id="learn" name="get-started" value="learn">
             <label for="learn">Learn the basics with the <span class="hyperlink"><a href="#">Getting Started Guide</a></span></label><br>
+            <!-- <section class="tasks">
+                <div class="container">
+                    <div class="listed-tasks">
+                        <input type="text" class="add-task" placeholder="Add a task">
+                    </div>
+                </div>
+            </section> -->
             <section class="tasks">
                 <div class="container">
                     <div class="task-actions">
