changed alert messages to personalised error messages

--- a/signup.html
+++ b/signup.html
@@ -29,7 +29,7 @@
                 <input type="email" class="text-field" id="email-field" placeholder="Enter your email address">
                 <label>Password*</label>
                 <input type="password" class="text-field" id="pwd-field" placeholder="Enter your password">
-                <!-- <p class="error-message" id="error">Please enter valid details</p> -->
+                <p class="error-message" id="error"></p>
                 <button class="signup-btn" id="signup">Sign up</button>
                 <p>Already a member? <span class="hyperlink"><a href="login.html">Log in</a></span></p>
             </form>
