update login.html - changed id tags for login page

--- a/login.html
+++ b/login.html
@@ -26,10 +26,11 @@
             </div>
             <form name="registration" class="signup-area">
                 <label>Email address*</label>
-                <input type="email" class="text-field" id="email-field" placeholder="Enter your email address">
+                <input type="email" class="text-field" id="email-login-field" placeholder="Enter your email address">
                 <label>Password*</label>
-                <input type="password" class="text-field" id="pwd-field" placeholder="Enter your password">
-                <button class="signup-btn">Log in</button>
+                <input type="password" class="text-field" id="pwd-login-field" placeholder="Enter your password">
+                <p class="error-message" id="error"></p>
+                <button class="signup-btn" id="login">Log in</button>
                 <p>Not a member? <span class="hyperlink"><a href="signup.html">Create account</a></span></p>
             </form>
         </div>
