added same navlinks to both the login and signup page

--- a/login.html
+++ b/login.html
@@ -13,7 +13,11 @@
                 <h1><a href="index.html">Taskflow</a></h1>
             </div>
             <ul class="main-nav">
-                <button class="login-btn" id="login"><a href="signup.html">Log in</a></button>
+                <li class="nav-links"><a href="#">Features</a></li>
+                <li class="nav-links"><a href="#">For Teams</a></li>
+                <li class="nav-links"><a href="#">Resources</a></li>
+                <li class="nav-links"><a href="#">Pricing</a></li>
+                <button class="login-btn" id="login"><a href="login.html">Log in</a></button>
             </ul>
         </nav>
     </header>
@@ -29,12 +33,14 @@
                 <input type="email" class="text-field" id="email-login-field" placeholder="Enter your email address">
                 <label>Password*</label>
                 <input type="password" class="text-field" id="pwd-login-field" placeholder="Enter your password">
-                <p class="error-message" id="error"></p>
+                <p class="error-message" id="login-error"></p>
                 <button class="signup-btn" id="login">Log in</button>
                 <p>Not a member? <span class="hyperlink"><a href="signup.html">Create account</a></span></p>
             </form>
         </div>
     </main>
-    <script src="scripts.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/registration.js"></script>
+    <script src="home.js"></script>
 </body>
 </html>
