--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,11 @@
                 <h1><a href="index.html">Taskflow</a></h1>
             </div>
             <ul class="main-nav">
-                <button class="login-btn" id="login"><a href="signup.html">Log in</a></button>
+                <li class="nav-links"><a href="#">Features</a></li>
+                <li class="nav-links"><a href="#">For Teams</a></li>
+                <li class="nav-links"><a href="#">Resources</a></li>
+                <li class="nav-links"><a href="#">Pricing</a></li>
+                <button class="login-btn" id="login"><a href="login.html">Log in</a></button>
             </ul>
         </nav>
     </header>
@@ -35,7 +39,7 @@
             </form>
         </div>
     </main>
-    <script src="js/auth.js"></script>
+    <script src="js/registration.js"></script>
     <script src="home.js"></script>
 </body>
 </html>
