update taskflow.html - removed radio button and added random tip container

--- a/taskflow.html
+++ b/taskflow.html
@@ -45,18 +45,15 @@
         <div class="container">
             <div class="dashboard-title">
                 <h2>Hello, <span id="username-display"></span></h2>
-                <h4>Welcome to your dashboard</h4>
+                <h3>Welcome to your dashboard</h3>
+                <div class="tips-container">
+                    <p id="tip-text">Tip of the Day: Learn to prioritize your tasks for maximum efficiency.</p>
+                </div>
             </div>
-            <div class="date">
-                <h4></h4>
-                <div class="filter-btn"></div>
-            </div>
-            <input type="radio" id="learn" name="get-started" value="learn">
-            <label for="learn">Learn the basics with the <span class="hyperlink"><a href="#">Getting Started Guide</a></span></label><br>
             <section class="tasks">
                 <div class="container">
                     <div class="date-display">
-                        <h5 id="date"></h5>
+                        <h4 class="date-heading"></h4>
                     </div>
                     <div class="listed-tasks">
                         <!-- Listed tasks from user appear here-->
