update signup.html - added extra input field for signup form

--- a/signup.html
+++ b/signup.html
@@ -29,6 +29,8 @@
                 <p>Quickly make a free account to use Taskflow right away!</p>
             </div>
             <form name="registration" class="signup-area">
+                <label>Full Name*</label>
+                <input type="email" class="text-field" id="name-field" placeholder="Enter your full name">
                 <label>Email address*</label>
                 <input type="email" class="text-field" id="email-field" placeholder="Enter your email address">
                 <label>Password*</label>
