minor tweaks to content on page

--- a/taskflow.html
+++ b/taskflow.html
@@ -10,6 +10,9 @@
 <body>
     <header>
         <nav id ="navigation-bar" class="account-page-bar">
+             <div class="logo">
+                <h2><a href="taskflow.html">My Taskflow</a></h2>
+            </div>
             <ul class="main-nav">
                 <li class="nav-links">
                     <i class="fas fa-home"></i>
@@ -29,9 +32,10 @@
 
     <main id="dashboard">
         <aside class="sidebar">
-            <div class="sidebar-tab" id="user">
-                <p>Free plan</p>
-            </div>
+            <!-- <div class="sidebar-tab" id="user">
+                <p>sample</p>
+                <p><i class="far fa-user"></i>Free plan</p>
+            </div> -->
             <div class="sidebar-tab" id="current-date">
                 <p><i class="far fa-calendar-check"></i>Today's tasks</p>
             </div>
