minor tweaks and deletion of files

--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
                 <li class="nav-links"><a href="#">For Teams</a></li>
                 <li class="nav-links"><a href="#">Resources</a></li>
                 <li class="nav-links"><a href="#">Pricing</a></li>
-                <button class="login-btn" id="login"><a href="login.html">Log in</a></button>
+                <button class="login-btn" id="login"><a href="signup.html">Log in</a></button>
             </ul>
         </nav>
     </header>
@@ -37,7 +37,6 @@
                 <input type="password" class="text-field" id="pwd-field" placeholder="Enter your password">
                 <p class="error-message" id="error"></p>
                 <button class="signup-btn" id="signup">Sign up</button>
-                <p>Already a member? <span class="hyperlink"><a href="login.html">Log in</a></span></p>
             </form>
         </div>
     </main>
