--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li class="nav-links"><a href="#">For Teams</a></li>
                 <li class="nav-links"><a href="#">Resources</a></li>
                 <li class="nav-links"><a href="#">Pricing</a></li>
-                <button class="login-btn" id="login"><a href="login.html">Log in</a></button>
+                <button class="login-btn" id="login"><a href="signup.html">Log in</a></button>
             </ul>
         </nav>
     </header>
@@ -31,6 +31,6 @@
             </div>
         </div>
     </main>
-    <script src="scripts.js"></script>
+    <script src="home.js"></script>
 </body>
 </html>
