--- a/taskflow.html
+++ b/taskflow.html
@@ -75,6 +75,7 @@
         </div>
     </main>
     <script src="js/registration.js"></script>
+    <script src="js/auth.js"></script>
     <script src="js/main.js"></script>
     <script src="home.js"></script>
 </body>
