--- a/signup.html
+++ b/signup.html
@@ -31,11 +31,14 @@
             <form name="registration" class="signup-area">
                 <label>Full Name*</label>
                 <input type="email" class="text-field" id="name-field" placeholder="Enter your full name">
+                <p class="error-message" id="error-name"></p>
                 <label>Email address*</label>
                 <input type="email" class="text-field" id="email-field" placeholder="Enter your email address">
+                <p class="error-message" id="error-email"></p>
                 <label>Password*</label>
                 <input type="password" class="text-field" id="pwd-field" placeholder="Enter your password">
-                <p class="error-message" id="error"></p>
+                <p class="error-message" id="error-pwd"></p>
+                <!-- <p class="error-message" id="error"></p> -->
                 <button class="signup-btn" id="signup">Sign up</button>
             </form>
         </div>
