update index.html - added html for hamburger menu icon

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
     <title>Taskflow | Your Productivity Partner</title>
-
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
@@ -19,6 +19,9 @@
                 <li class="nav-links"><a href="#">Pricing</a></li>
                 <button class="login-btn" id="login"><a href="signup.html">Log in</a></button>
             </ul>
+            <div class="mobile-menu" id="menu-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
         </nav>
     </header>
 
