--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/87d1e51bc1.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav id ="navigation-bar">
+            <div class="mobile-menu" id="menu-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
             <div class="logo">
                 <h1><a href="index.html">Taskflow</a></h1>
             </div>
@@ -18,10 +22,7 @@
                 <li class="nav-links"><a href="#">Resources</a></li>
                 <li class="nav-links"><a href="#">Pricing</a></li>
                 <button class="login-btn" id="login"><a href="signup.html">Log in</a></button>
-            </ul>
-            <div class="mobile-menu" id="menu-toggle">
-                <i class="fas fa-bars"></i>
-            </div>
+            </ul>           
         </nav>
     </header>
 
