update styles.css - completed mobile screen responsiveness for home and signup page

--- a/signup.html
+++ b/signup.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <head>
     <title>Sign up for a free account | Taskflow</title>
-
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/87d1e51bc1.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav id ="navigation-bar">
+            <div class="mobile-menu" id="menu-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
             <div class="logo">
                 <h1><a href="index.html">Taskflow</a></h1>
             </div>
