--- a/taskflow.html
+++ b/taskflow.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
     <title>To-Do List | Taskflow</title>
-
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/87d1e51bc1.js" crossorigin="anonymous"></script>
@@ -75,7 +75,6 @@
         </div>
     </main>
     <script src="js/registration.js"></script>
-    <script src="js/auth.js"></script>
     <script src="js/main.js"></script>
     <script src="home.js"></script>
 </body>
